# zomdroid-dependencies

./: .gitignore  README.md  build-gl4es.sh  build-jassimp.sh  build-jniwrapper.sh  build-lwjgl-3.2.3.sh  build-lwjgl-3.3.6.sh  build-mesa.sh  build-zomdroid-agent.sh
.github/workflows/: build-all-android-arm64-release.yml
jniwrapper/: CMakeLists.txt  jniwrapper.cpp
patches/assimp/: 0001.patch
patches/gl4es/: 0001.patch
patches/lwjgl-3.2.3/: 0001.patch
patches/lwjgl-3.3.6/: 0001.patch
patches/mesa/: 0001.patch
zomdroid-agent/: pom.xml
zomdroid-agent/src/main/java/com/zomdroid/agent/: Main.java
zomdroid-agent/src/main/java/com/zomdroid/agent/decorators/: ShaderUnit.java
zomdroid-agent/src/main/java/com/zomdroid/agent/glsl/: GLSLBottomUpContextResolver.java  GLSLCoreToESVisitor.java  GLSLType.java
zomdroid-agent/src/main/java/com/zomdroid/agent/glsl/antlr/: GLSLLexer.java  GLSLParser.java  GLSLParserBaseListener.java  GLSLParserBaseVisitor.java  GLSLParserListener.java  GLSLParserVisitor.java
zomdroid-agent/src/main/resources/: GLSL_ES_2_BUILTINS
